# NLPortugues

./: .gitignore
EP 2/: EP2-notebook_version.ipynb  README.md
EP 2/src/: ep2.py
EP 3/: README.md  ep3.py  pyproject.toml  requirements.txt
EP 3/code_utils/metrics/: __init__.py  compute_metrics.py
EP 3/code_utils/models/bert/: __init__.py  inference.py  training.py
EP 3/code_utils/models/bilstm/: __init__.py  inference.py  training.py
EP 3/code_utils/preprocessing/: data_preprocessing.py
EP 3/data/bert/: final_metrics.csv  sample_sentences.csv
EP 3/data/bilstm/: final_metrics.csv  sample_sentences.csv
EP 3/notebooks/: debugger-bert.ipynb  debugger-bilstm.ipynb  estudo-bert.ipynb  estudo-bilstm.ipynb
Semana 05/: Lista 05 - Vanishing&Exploding Gradient_AndreBarbosa.ipynb
Semana 06/: 06 - LSTM&GRUAndreBarbosa.ipynb
Semana 07/: 7971751-AndreBarbosa-Lista07.ipynb
Semana 08/: 7971751-AndreBarbosa-Lista08.ipynb
Semana 09/: 7971751-AndreBarbosa09Convolucoes.ipynb
Semana 10/: 7971751-AndreBarboa10BERT.ipynb  Lista 10 -BERT.ipynb  slides.ipynb
