[tool.poetry]
name = "ep 3"
version = "0.1.0"
description = "EP3 da mateira de computacao linguistica"
authors = ["André Barbosa"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "3.3.1"
pandas = "1.1.1"
click = "7.1.2"
nltk = "3.5"
numpy = "^1.19.4"
tensorflow = "^2.2.1"
tqdm = "4.48.2"
scikit_learn = "0.23.2"
jupyter = "^1.0.0"
notebook = "^6.1.5"
transformers = "^4.0.1"
pydot = "^1.4.1"
torch = "^1.7.1"
ipdb = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
